<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/article">

    <TextView
        android:id="@+id/section_text_view"
        style="@style/SmallStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/section"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/title_text_view"
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_xlarge">

        <TextView
            android:id="@+id/author_text_view"
            style="@style/SmallStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"/>

        <View
            android:id="@+id/bullet_view"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:background="@drawable/circle"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/date_text_view"
            style="@style/SmallStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="@color/colorPrimaryLight" />

    </LinearLayout>

</LinearLayout>
